--- a/views/style.css
+++ b/views/style.css
@@ -22,15 +22,16 @@
 
 footer {
   position: relative;
-  bottom: 1vh;
+  bottom: 0px;
   display: flex;
+  background-color: black;
 }
 
 #adress-timetable {
-  border: solid 3px #D9777F;
   border-radius: 30px;
   padding: 15px;
   margin: 10px;
+  color: #D9777F
 }
 
 #adress {
@@ -45,6 +46,9 @@ footer {
   margin: 0;
 }
 
+#contact {
+  color: #D9777F
+}
 
 .services-card {
   border-radius: 30px;
@@ -62,13 +66,19 @@ footer {
   margin: 10px;
 }
 
-.cars-home-pictures {
-  height: 150px;
-  width: 150px;
-}
-.cars-home-pictures {
-  width: 100%;
-  height: 100%;
+#login-f {
+  width : 50%;
+  height: 50vh;
+  align-items: center;
+  border: solid 1px #D9777F;
+  margin-bottom: 10px;
 }
 
+#login-form {
+  width : 80%;
+}
+
+@media screen and (max-width: 576px) {
+
+}
 
