--- a/views/style.css
+++ b/views/style.css
@@ -22,7 +22,7 @@ header {
 
 /*footer*/
 footer {
-  position: relative;
+  position: static;
   bottom: 0px;
   display: flex;
   background-color: black;
@@ -53,9 +53,7 @@ footer {
 
 /*home*/
 .card {
-  height: 10px;
   width: 100%;
-  margin: 10px;
   padding: 10px;
   border: 0;
 }
@@ -77,6 +75,9 @@ footer {
   height: 200px;
 
 }
+
+/* cars */
+
 
 /*car's detail*/
 .pictures {
