--- a/views/style.css
+++ b/views/style.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Mukta', sans-serif;
 }
 
-h1, button, .card-title, .card-text-commentary, .carsButton, .detailButton, .contactForm, .commentForm, .loginButton, .backendButton {
+h1, button, .card-title, .card-text-commentary, .carsButton, .detailButton, .contactForm, .commentForm, .loginButton, .backendButton, #buttonaddstaffform {
   font-family: 'Trirong', serif;
 }
 
@@ -11,16 +11,12 @@ h1, button, .card-title, .card-text-commentary, .carsButton, .detailButton, .con
   display: flex;
 }
 
-#contact, .carsButton, #adress-timetable, .card-text-commentary {
+#contact, .carsButton, #adress-timetable, .card-text-commentary, #buttonaddstaffform {
   color: #D92332;
 }
 
 h4, .contactButton, .commentButton, .detailButton, .contactForm, .commentForm, .loginButton, .backendButton {
   color: black;
-}
-
-.services-card, #adress-timetable {
-  border-radius: 30px;
 }
 
 footer, .carsButton {
@@ -44,9 +40,6 @@ footer, .carsButton {
   position: absolute;
 }
 
-.carDetail, #login-f, .services-card {
-  border: solid 1px #D92332;
-}
 
 /*layout*/
 header {
@@ -103,6 +96,11 @@ footer {
 
 .services-card {
   display: inline-block;
+  border: solid 1px #D92332;
+}
+
+.services-card, #adress-timetable {
+  border-radius: 30px;
 }
 
 .carsButton {
@@ -140,6 +138,11 @@ h1{
 
 .carDetail {
   border-radius: 20px;
+  border: solid 1px #D92332;
+}
+
+#carouselExampleDark {
+  margin-top: 10px;
 }
 
 /*login*/
@@ -147,6 +150,7 @@ h1{
   width : 50%;
   height: 50vh;
   padding: 20px;
+  border: solid 1px #D92332;
 }
 
 #login-form {
@@ -162,8 +166,13 @@ h1{
   display : none;
 }
 
-/*responsive*/
+#buttonaddstaffform {
+  border: solid 1px #D92332;
+  background-color: white;
+}
 
+/*responsive*/
+/* TO DO : scroll card/photo +  replace text for icon */
 @media screen and (max-width: 576px) {
 #login-f {
     width : 100%;
